RESOLVED FIXED53743
css style="max-width:none" works wrong
https://bugs.webkit.org/show_bug.cgi?id=53743
Summary css style="max-width:none" works wrong
Kenichi Ishibashi
Reported 2011-02-03 17:21:28 PST
Originally reported at: http://code.google.com/p/chromium/issues/detail?id=64511 'max-width: none' should have no effect because it is the initial state. For now, if style="max-width:none" is set to an element, it outer with is restricted to the with of the closest parent, which have width settings. See the attached test case that the original reporter provided.
Attachments
testcase (1.01 KB, text/html)
2011-02-03 17:22 PST, Kenichi Ishibashi
no flags
Patch (3.88 KB, patch)
2011-02-03 18:01 PST, Kenichi Ishibashi
bashi: commit-queue-
Patch V1 (4.02 KB, patch)
2011-02-13 21:02 PST, Kenichi Ishibashi
no flags
Kenichi Ishibashi
Comment 1 2011-02-03 17:22:15 PST
Created attachment 81153 [details] testcase
Alexander Romanovich
Comment 2 2011-02-03 17:41:23 PST
See also bug 26809.
Kenichi Ishibashi
Comment 3 2011-02-03 18:01:20 PST
Kenichi Ishibashi
Comment 4 2011-02-03 18:04:49 PST
Hi Alexander, (In reply to comment #2) > See also bug 26809. Thank you for letting me the bug. I think the patch I just sent will fix the bug 26809, too. Regards,
Alexander Romanovich
Comment 5 2011-02-03 20:25:33 PST
No problem. Thanks for providing a patch! Feel free to close the other bug if this solves it.
Kenichi Ishibashi
Comment 6 2011-02-09 00:08:55 PST
Hi hyatt, Could you review this patch if you have time? Thanks in advance,
Andreas Kling
Comment 7 2011-02-13 18:38:03 PST
Comment on attachment 81162 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=81162&action=review Nice catch! r=me For reference, max-height used to have the same problem, this was fixed in <http://trac.webkit.org/changeset/13462> > Source/WebCore/ChangeLog:13 > + (WebCore::CSSStyleSelector::applyProperty): Set length to be undefined. This comment is more unspecific than helpful.
Kenichi Ishibashi
Comment 8 2011-02-13 21:02:49 PST
Created attachment 82284 [details] Patch V1
Kenichi Ishibashi
Comment 9 2011-02-13 21:07:37 PST
Comment on attachment 81162 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=81162&action=review Hi Andreas, Thank you very much for review and your comments. I updated the patch. Could someone cq+? >> Source/WebCore/ChangeLog:13 >> + (WebCore::CSSStyleSelector::applyProperty): Set length to be undefined. > > This comment is more unspecific than helpful. Revised.
Kenichi Ishibashi
Comment 10 2011-02-13 21:08:28 PST
Comment on attachment 81162 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=81162&action=review Hi Andreas, Thank you very much for review and your comments. I updated the patch. Could someone cq+? >>> Source/WebCore/ChangeLog:13 >>> + (WebCore::CSSStyleSelector::applyProperty): Set length to be undefined. >> >> This comment is more unspecific than helpful. > > Revised. Revised.
WebKit Commit Bot
Comment 11 2011-02-14 05:14:02 PST
Comment on attachment 82284 [details] Patch V1 Clearing flags on attachment: 82284 Committed r78469: <http://trac.webkit.org/changeset/78469>
WebKit Commit Bot
Comment 12 2011-02-14 05:14:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.