2011-02-14  Kenichi Ishibashi  <bashi@chromium.org>

Reviewed by Andreas Kling.

        css style="max-width:none" works wrong
        https://bugs.webkit.org/show_bug.cgi?id=53743

        Adds a test to ensure style 'max-width: none' works correctly.

        * fast/css/max-width-none-expected.txt: Added.
        * fast/css/max-width-none.html: Added.
2011-02-14  Kenichi Ishibashi  <bashi@chromium.org>

        Reviewed by Andreas Kling.

        css style="max-width:none" works wrong
        https://bugs.webkit.org/show_bug.cgi?id=53743

        Fix a bug that "max-width:none" works wrong.
        See also: http://trac.webkit.org/changeset/13462

        Test: fast/css/max-width-none.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty): For max-width of none,
        set it to Length(undefinedLength, Fixed), which is the correct
        value.

git-svn-id: svn://svn.chromium.org/blink/trunk@78469 bbb929c8-8fbe-4397-9dbb-9b2b20218538